# XSigma

./: .gitignore  CMakeLists.txt  xcodetable.cpp  xsigma.cpp  xsigma.hpp
test/: main.cpp
